# half-mapper

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.xml  cstrike-offsets.json  cstrike.xml  halflife-offsets.json  halflife.xml  imgui.ini  opposingforce-offsets.json  opposingforce.xml  test.xml  vcpkg-configuration.json  vcpkg.json
data/: cstrike.xml  halflife.xml
rewrite/: ConfigXML.cpp  ConfigXML.hpp  bsp.cpp  entities.cpp  entities.hpp  main.cpp  wad.cpp  wad.hpp
rewrite/utils/: base_app.hpp  player.hpp  window.hpp
shaders/: draw.glsl
shared/: shared.inl
src/: ConfigXML.cpp  ConfigXML.hpp  VideoSystem.cpp  VideoSystem.h  bsp.cpp  bsp.h  bsp.hpp  common.h  common.hpp  entities.cpp  halfmapper.cpp  main.cpp  wad.cpp  wad.h
src/utils/: base_app.hpp  player.hpp  window.hpp
